--- a/views/drones/create-form.hbs
+++ b/views/drones/create-form.hbs
@@ -1,1 +1,20 @@
 <h2>Create a new drone</h2>
+
+<form action="/drones/create" method="POST">
+    <div>
+        <label for="drone-model">Model</label>
+        <input type="text" name="name" id="drone-model">
+    </div>
+    <br>
+    <div>
+        <label for="drone-propellers">Propellers</label>
+        <input type="number" min="2" max="20" name="propellers" id="drone-propellers">
+    </div>
+    <br>
+    <div>
+        <label for="drone-max-speed">Max Speed</label>
+        <input type="number" min="1" max="900" name="maxSpeed" id="drone-max-speed">
+    </div>
+    <br>
+    <button type="submit">Create Drone</button>
+</form>
