--- a/views/drones/list.hbs
+++ b/views/drones/list.hbs
@@ -1,1 +1,13 @@
 <h2>Available drones</h2>
+
+{{#each drones}}
+    <h2>Model: {{name}}</h2>
+    <h3>Propellers: {{propellers}}</h3>
+    <h3>Max Speed: {{maxSpeed}}</h3>
+    <a href="/drones/{{id}}/edit">Update</a>
+    
+    <form action="/drones/{{id}}/delete" method="POST">
+        <button type="submit">Delete</button>
+    </form>
+    <hr>
+{{/each}}
