--- a/views/drones/update-form.hbs
+++ b/views/drones/update-form.hbs
@@ -1,1 +1,22 @@
 <h2>Update the drone</h2>
+
+<form action="/drones/{{drone.id}}/edit" method="POST">
+    <div>
+        <label for="drone-model">Model</label>
+        <input type="text" name="name" id="drone-model" value="{{drone.name}}">
+    </div>
+    <br>
+    <div>
+        <label for="drone-propellers">Propellers</label>
+        <input type="number" min="2" max="20" name="propellers" 
+            id="drone-propellers" value="{{drone.propellers}}">
+    </div>
+    <br>
+    <div>
+        <label for="drone-max-speed">Max Speed</label>
+        <input type="number" min="1" max="900" name="maxSpeed" 
+            id="drone-max-speed" value="{{drone.maxSpeed}}">
+    </div>
+    <br>
+    <button type="submit">Update Drone</button>
+</form>
