--- a/views/drones/create-form.hbs
+++ b/views/drones/create-form.hbs
@@ -1,20 +1,20 @@
 <h2>Create a new drone</h2>
 
-<form action="/drones/create" method="POST">
+<form action="/drones/create" method="POST" class="col-md-6">
     <div>
-        <label for="drone-model">Model</label>
-        <input type="text" name="name" id="drone-model">
+        <label class="form-label" for="drone-model">Model</label>
+        <input class="form-control" type="text" name="name" id="drone-model" required>
     </div>
     <br>
     <div>
-        <label for="drone-propellers">Propellers</label>
-        <input type="number" min="2" max="20" name="propellers" id="drone-propellers">
+        <label class="form-label" for="drone-propellers">Propellers</label>
+        <input class="form-control" type="number" min="2" max="20" name="propellers" id="drone-propellers" required>
     </div>
     <br>
     <div>
-        <label for="drone-max-speed">Max Speed</label>
-        <input type="number" min="1" max="900" name="maxSpeed" id="drone-max-speed">
+        <label class="form-label" for="drone-max-speed">Max Speed</label>
+        <input class="form-control" type="number" min="1" max="900" name="maxSpeed" id="drone-max-speed" required>
     </div>
     <br>
-    <button type="submit">Create Drone</button>
+    <button class="btn btn-secondary" type="submit">Create Drone</button>
 </form>
